# manosoba-reply-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
nonebot_plugin_manosoba_reply_generator/: Utils.py  __init__.py
src/plugins/nonebot_plugin_manosoba_reply_generator/: Utils.py
src/plugins/nonebot_plugin_manosoba_reply_generator/assets/: config.json
