[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-manosoba-reply-generator"
version = "0.1.6"
description = "a reply img generator for the game manosoba"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.0.0",
    "pillow>=10.0.0"
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_manosoba_reply_generator"]
plugin_dirs = []
builtin_plugins = ["echo"]

[tool.setuptools.packages.find]
include = ["nonebot_plugin_manosoba_reply_generator"]

[tool.setuptools.package-data]
nonebot_plugin_manosoba_reply_generator = ["assets/*"]
